tests/compile_fail/derive_missing_name.rs
#[derive(ktstr::Scheduler)]
#[scheduler(binary = "scx_test")]
#[allow(dead_code)]
enum MissingNameFlag {}

fn main() {}
